--- a/.github/workflows/Whimsiblog20250917103539.yml
+++ b/.github/workflows/Whimsiblog20250917103539.yml
@@ -1,48 +1,103 @@
-name: Build and deploy .NET Core application to Web App Whimsiblog20250917103539
+name: Build and deploy ASP.Net Core app to Azure Web App - Whimsiblog20250917103539
+
+
+
 on:
+
   push:
+
     branches:
-    - main
-env:
-  AZURE_WEBAPP_NAME: Whimsiblog20250917103539
-  AZURE_WEBAPP_PACKAGE_PATH: Whimsiblog\published
-  CONFIGURATION: Release
-  DOTNET_CORE_VERSION: 8.0.x
-  WORKING_DIRECTORY: Whimsiblog
+
+      - main
+
+  workflow_dispatch:
+
+
+
 jobs:
+
   build:
+
     runs-on: windows-latest
+
+    permissions:
+
+      contents: read #This is required for actions/checkout
+
+
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
-    - name: Restore
-      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
-    - name: Build
-      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-    - name: Test
-      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
-    - name: Publish
-      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+      - uses: actions/checkout@v4
+
+
+
+      - name: Set up .NET Core
+
+        uses: actions/setup-dotnet@v4
+
+        with:
+
+          dotnet-version: '3.1'
+
+
+
+      - name: Build with dotnet
+
+        run: dotnet build --configuration Release
+
+
+
+      - name: dotnet publish
+
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+
+
+
+      - name: Upload artifact for deployment job
+
+        uses: actions/upload-artifact@v4
+
+        with:
+
+          name: .net-app
+
+          path: ${{env.DOTNET_ROOT}}/myapp
+
+
+
   deploy:
+
     runs-on: windows-latest
+
     needs: build
+
+    
+
     steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v4
-      with:
-        name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    - name: Deploy to Azure WebApp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.Whimsiblog20250917103539_B902 }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+      - name: Download artifact from build job
+
+        uses: actions/download-artifact@v4
+
+        with:
+
+          name: .net-app
+
+      
+
+      - name: Deploy to Azure Web App
+
+        id: deploy-to-webapp
+
+        uses: azure/webapps-deploy@v3
+
+        with:
+
+          app-name: 'Whimsiblog20250917103539'
+
+          slot-name: 'Production'
+
+          package: .
+
+          publish-profile: ${{ secrets.__publishingprofilesecretname__ }}
