Configure MAnaged Identity

--- a/Whimsiblog/appsettings.json
+++ b/Whimsiblog/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Whimsiblog;User ID=blogdbcontext;Password=1234;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=tcp:beorn-db.database.windows.net,1433;Initial Catalog=Whimsiblog_db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
   "AllowedHosts": "*",
   "AzureAd": {
