--- a/Whimsiblog/appsettings.json
+++ b/Whimsiblog/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "localhost\\SQLEXPRESS"
+    "DefaultConnection": "Server=tcp:whimsiblog-db.database.windows.net,1433;Initial Catalog=whimsiblog-db;Persist Security Info=False;User ID=kyray001;Password=BuffaloBison32!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*",
   "AzureAd": {
