--- a/.github/workflows/Whimsiblog20250917103539.yml
+++ b/.github/workflows/Whimsiblog20250917103539.yml
@@ -1,103 +1,57 @@
-name: Build and deploy ASP.Net Core app to Azure Web App - Whimsiblog20250917103539
-
-
+name: Build and deploy ASP.NET Core app to Azure Web App - Whimsiblog20250917103539
 
 on:
-
   push:
-
     branches:
-
       - main
-
   workflow_dispatch:
 
-
-
 jobs:
-
   build:
-
     runs-on: windows-latest
-
     permissions:
-
-      contents: read #This is required for actions/checkout
-
-
+      contents: read
 
     steps:
-
       - uses: actions/checkout@v4
 
-
-
-      - name: Set up .NET Core
-
+      - name: Set up .NET
         uses: actions/setup-dotnet@v4
-
         with:
+          dotnet-version: '8.0.x'
 
-          dotnet-version: '3.1'
+      - name: Restore dependencies
+        run: dotnet restore
 
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
 
-
-      - name: Build with dotnet
-
-        run: dotnet build --configuration Release
-
-
-
-      - name: dotnet publish
-
+      - name: Publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
-
-
-      - name: Upload artifact for deployment job
-
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
-
         with:
-
-          name: .net-app
-
+          name: dotnet-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-
-
   deploy:
-
     runs-on: windows-latest
-
     needs: build
 
-    
-
     steps:
-
-      - name: Download artifact from build job
-
+      - name: Download artifact
         uses: actions/download-artifact@v4
-
         with:
+          name: dotnet-app
 
-          name: .net-app
-
-      
+      - name: List files
+        run: dir
 
       - name: Deploy to Azure Web App
-
-        id: deploy-to-webapp
-
         uses: azure/webapps-deploy@v3
-
         with:
-
           app-name: 'Whimsiblog20250917103539'
-
           slot-name: 'Production'
-
           package: .
-
-          publish-profile: ${{ secrets.__publishingprofilesecretname__ }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
