--- a/Whimsiblog/appsettings.json
+++ b/Whimsiblog/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:whimsiblog-db.database.windows.net,1433;Initial Catalog=whimsiblog-db;Persist Security Info=False;User ID=kyray001;Password=BuffaloBison32!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Whimsiblog;User ID=blogdbcontext;Password=1234;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
+
   },
   "AllowedHosts": "*",
   "AzureAd": {
